<resources>
    <string name="app_name">Rate My Class</string>
    <string name="action_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="menu_dept">Department</string>
    <string name="menu_profile">Profile</string>
    <string name="class_search">Class Search</string>
    <string name="search_for_a_course">Search For a Course</string>
    <string name="submit">Submit</string>
    <string name="user_name">User Name</string>
    <string name="taken_with">Taken with: </string>
    <string name="professor_name">Professor name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="icon">Icon</string>
    <string name="my_favorites">My Favorites</string>
    <string name="sign_out">Sign Out</string>
    <string name="my_comments">My Comments</string>
    <string name="manage_account">Manage Account</string>
    <string name="username_rose_hulman_edu">username@rose-hulman.edu</string>
    <string name="overall">Overall</string>
    <string name="difficulty">Difficulty</string>
    <string name="learning">Learning</string>
    <string name="workload">Workload</string>
    <string name="overall_add">Overall:</string>
    <string name="difficulty_add">Difficulty:</string>
    <string name="learning_add">Learning:</string>
    <string name="workload_add">Workload:</string>
    <string name="comment_add">Comment:</string>
    <string name="take_with">Take with:</string>
    <string name="_0">0</string>
    <string name="choose_a_department">Choose a department:</string>
    <string name="comments_you_have_posted">Comments you have posted:</string>
    <string name="error_msg_1">You are required to sign in before posting a comment. Do you want to log in now?</string>
    <string name="error_msg_2">You are required to sign in before doing this. Do you want to log in now?</string>
    <string name="edit_profile_image">Edit profile image</string>
    <string name="the_course_does_not_exist">The course does not exist</string>
</resources>
