<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="8dp">



    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/profile_email"
        android:src="@drawable/profile_img"
        android:layout_marginBottom="80dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profile_email"
        android:layout_centerInParent="true"
        android:textAlignment="center"
        android:textSize="24sp"
        android:text="@string/username_rose_hulman_edu" />

    <Button
        android:id="@+id/button_manage"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/manage_account"
        android:layout_below="@id/profile_email"
        android:layout_centerHorizontal="true"
        android:padding="4dp"
        android:layout_margin="8dp" />

    <Button
        android:id="@+id/button_comments"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/my_comments"
        android:layout_below="@id/button_manage"
        android:layout_centerHorizontal="true"
        android:padding="4dp"
        android:layout_margin="8dp" />

    <Button
        android:id="@+id/button_sign_out"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:layout_below="@id/button_comments"
        android:layout_alignParentRight="true"
        android:padding="4dp"
        android:layout_margin="8dp" />

</RelativeLayout>