<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:padding="8dp"
    android:id="@+id/card_view"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main"
    app:cardCornerRadius="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:id="@+id/course_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:id="@+id/professor"
            android:text="@string/take_with"
            android:layout_margin="10dp"
            android:layout_below="@+id/course_title" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_prof"
            android:layout_alignBottom="@+id/professor"
            android:layout_toRightOf="@+id/professor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/first_rate"
            android:layout_below="@id/professor">
            <TextView
                android:layout_width="0dp"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content"
                android:text="@string/overall_add"
                android:textAlignment="center"
                android:layout_weight="0.3" />
            <RatingBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:scaleX="0.75"
                android:scaleY="0.75"
                android:numStars="5"
                android:stepSize="1"
                android:layout_weight="0.7"
                android:id="@+id/overall_rating"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/second_rate"
            android:layout_below="@+id/first_rate">
            <TextView
                android:layout_width="0dp"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content"
                android:text="@string/difficulty_add"
                android:textAlignment="center"
                android:layout_weight="0.3" />
            <RatingBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:scaleX="0.75"
                android:scaleY="0.75"
                android:numStars="5"
                android:stepSize="1"
                android:layout_weight="0.7"
                android:id="@+id/difficulty_rating"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/third_rate"
            android:layout_below="@+id/second_rate">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/learning_add"
                android:textAlignment="center"
                android:layout_weight="0.3" />
            <RatingBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:scaleX="0.75"
                android:scaleY="0.75"
                android:numStars="5"
                android:stepSize="1"
                android:layout_weight="0.7"
                android:id="@+id/learning_rating"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/fourth_rate"
            android:layout_below="@+id/third_rate">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/workload_add"
                android:textAlignment="center"
                android:layout_weight="0.3" />
            <RatingBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:scaleX="0.75"
                android:scaleY="0.75"
                android:numStars="5"
                android:stepSize="1"
                android:layout_weight="0.7"
                android:id="@+id/workload_rating"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment_add"
            android:id="@+id/comment"
            android:layout_below="@+id/fourth_rate"
            android:layout_margin="10dp"
            android:textAlignment="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_comment"
            android:layout_below="@id/comment" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>